fix: 스터디 플래너 알림 도메인 검증 및 권한 체크 보강